<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include layout="@layout/tool_bar" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:src="@drawable/logo_app" />

    <RelativeLayout
        android:id="@+id/relative_btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/imageView"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="153dp"
        android:background="@drawable/backgraund_facebook_button">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_margin="2dp"
            android:background="#00ffffff"
            android:text="@string/by_facebook"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_below="@+id/relative_btn_facebook"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/backgraund_manually_button"
        android:text="@string/manually"
        android:textColor="#146450"
        android:id="@+id/btn_manually" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <RelativeLayout
                android:layout_margin="5dp"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/cricle_layout">

                <TextView
                    android:id="@+id/tv_icon_need_help"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <TextView
                android:textSize="13sp"
                android:layout_marginLeft="9dp"
                android:textColor="@color/colorWhite"
                android:text="@string/need_help"
                android:id="@+id/tv_text_need_help"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_marginTop="35dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:textSize="13sp"
                android:textColor="@color/colorWhite"
                android:text="@string/english"
                android:id="@+id/tv_text_localisation"
                android:layout_marginRight="9dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RelativeLayout
                android:layout_margin="5dp"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/cricle_layout">

                <TextView
                    android:id="@+id/tv_icon_localisation"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
